[package]
name = "hiff"
version = "0.0.0"
license = "MIT OR Apache-2.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.95"
brace-ec = { path = "../../packages/brace-ec" }
brace-ec-tui = { path = "../../packages/brace-ec-tui" }
clap = { version = "4.5.26", features = ["derive"] }
rand = "0.9.0"
ratatui = "0.29.0"
